# Tick-Tick

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  docker-compose-ci.yaml  docker-compose.yaml  entrypoint.sh  nginx-dev.conf  nginx.conf  pyproject.toml
.github/workflows/: action.yaml
bot/: admin.py  apps.py  models.py  password_generator.py  serializers.py  urls.py  views.py
bot/migrations/: 0001_initial.py  0002_remove_tguser_tg_user_id_tguser_tg_user_name_and_more.py
bot/tg/: client.py  dc.py  utils.py
core/: admin.py  managers.py  middleware.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_managers.py
core/templates/: vk_api_error.html  vk_login_error.html
deploy/: .env  docker-compose.yaml  nginx.conf
frontend/: angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
frontend/src/: proxy.conf.json  styles.scss
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0002_goal_goalcomment.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
postgres/: .env.example
tests/: conftest.py  factories.py  fixtures.py  test_root_healthcheck.py
tests/core/: user_login_test.py  user_profile_test.py  user_signup_test.py  user_update_password_test.py
tests/goals/: board_create_test.py  board_list_test.py  board_retrieve_update_delete_test.py  (+7 more)
todolist/: settings.py  urls.py
(+101 files in other folders)
