[tool.poetry]
name = "tick-tick"
version = "0.1.0"
description = ""
authors = ["doom <phramov945@gmail.com>"]
readme = "README.md"
packages = [{include = "tick_tick"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
drf-yasg = "^1.21.4"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
